<resources>
    <string name="app_name">LPOOL Client</string>

    <string name="action_about">About</string>
    <string name="action_instructions">Instructions</string>
    <string name="ip_text_hint">Server IP</string>
    <string name="port_text_hint">Server Port</string>
    <string name="name_text_hint">Player Name</string>
    <string name="shot_act_name">Shot Activity</string>
    <string name="instructions_act_name">Instructions Activity</string>
    <string name="title_activity_instructions">InstructionsActivity</string>

    <string name="qr_button_text">Connect From QR Code</string>
    <string name="instructions_button_text">Instructions</string>
    <string name="connect_button_text">Connect</string>

    <string name="instructions_text_1">Tilt your phone sideways to aim for your shot. More inclination means more rotation speed.</string>
    <string name="instructions_text_2">Then, just press the screen to shoot the ball. The longer you press, the faster it goes! Release the screen off the button to cancel the shot</string>

    <string name="hello_world">Hello world!</string>

    <string name="wait_text">Please wait for your turn </string>
    <string name="wait_text_dot1">.</string>
    <string name="wait_text_dot2">. .</string>
    <string name="wait_text_dot3">. . .</string>
    <string name="title_activity_title_screen">TitleScreenActivity</string>

    <string name="balltype_none">You still haven\'t scored any balls.</string>
    <string name="balltype_solid">You are playing "solid" balls.</string>
    <string name="balltype_stripe">You are playing "striped" balls.</string>
    <string name="balltype_black">Only the 8 ball left!</string>

    <string name="about_text">This app was designed for a project called "LPOOL", developed for the course "Object Oriented Programming Laboratory" of the Faculty of Engineering of the University of Porto. This app is a client app, developed alongside a Java server application for PC. To download this or the server app please visit lpool.pt.vu.</string>
    <string name="about_author_1">André Sousa Lago (up201303313@fe.up.pt)</string>
    <string name="about_author_2">Gustavo Rocha da Silva (up201304143@fe.up.pt)</string>

    <string name="win_black_last">You won because you scored the black ball! Congratulations!</string>
    <string name="lose_black_last">You have lost because your opponent scored the black ball... Better luck next time!</string>
    <string name="win_black_accident">You won because your opponent accidentally scored the black ball. Congratulations!</string>
    <string name="lose_black_accident">You have lost because you accidentally scored the black ball... Better luck next time!</string>
    <string name="disconnected_timeout">The game was terminated because your opponent\'s connection timed out. Try again later.</string>
    <string name="disconnected_voluntary">The game was terminated because your opponent has disconnected from the game.</string>
    <string name="disconnected_quit">The game was terminated because you were disconnected.</string>
    <string name="kicked">You were kicked from the server, probably due to it being full of players. Try again later.</string>
    <string name="continue_text">Touch the screen to continue.</string>
        <string name="title_activity_about">AboutActivity</string>
</resources>
