<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:configChanges="keyboardHidden|orientation"
    android:screenOrientation="landscape"
    tools:context="com.lpool.client.Lobby.MainScreenActivity"
    android:id="@+id/layout">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/logoLayout"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/logoImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/lpool" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/commandsLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/textLayout"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ipField"
                android:editable="true"
                android:hint="@string/ip_text_hint"
                android:autoText="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="phone"
                android:digits="1234567890."
                android:password="false"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/portField"
                android:editable="true"
                android:hint="@string/port_text_hint"
                android:autoText="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="phone"
                android:digits="1234567890"
                android:password="false"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonsLayout"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_button_text"
                android:id="@+id/connectBtn"
                android:onClick="connectToServer"
                android:nestedScrollingEnabled="false"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qr_button_text"
                android:id="@+id/btnReadQR"
                android:clickable="true"
                android:onClick="readInfoFromQR"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_button_text"
                android:id="@+id/button"
                android:onClick="openInstructions"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
