<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GameController.WaitState"
    android:keepScreenOn="true"
    android:id="@+id/mainLayout">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/waitLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/layout1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lpoolLogo"
                android:src="@mipmap/lpool"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wait_text"
                android:id="@+id/waitText"
                android:textSize="20dp"
                android:textColor="#ff877f85"
                android:layout_weight="9"
                android:gravity="top|center_horizontal"
                android:visibility="visible" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/placeBallLayout"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:id="@+id/tableandball">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/poolTable"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/pooltable"
                    android:layout_weight="0.20"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/cueBallPlacable"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/cue" />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Place Ball"
            android:clickable="true"
            android:id="@+id/placeBallButton"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible"
        android:id="@+id/fireLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:id="@+id/left"
            android:layout_gravity="bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/logo"
                android:src="@mipmap/lpool"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:id="@+id/center">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cueBall"
                    android:src="@mipmap/cue"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/limit"
                    android:src="@mipmap/limit"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="4dp"
                    android:background="#ff000000"
                    android:id="@+id/horizontalLine"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"></RelativeLayout>

                <RelativeLayout
                    android:layout_width="4dp"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="#ff000000"
                    android:id="@+id/verticalLine"></RelativeLayout>

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:id="@+id/right">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:background="@drawable/force_gradient"
                android:layout_alignLeft="@+id/fireButton"
                android:layout_alignStart="@+id/fireButton"
                android:layout_alignRight="@+id/fireButton"
                android:layout_alignEnd="@+id/fireButton"
                android:id="@+id/strengthBar"
                android:layout_above="@+id/strengthCover">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/strengthCover"
                android:layout_alignParentBottom="true"
                android:layout_alignTop="@+id/fireButton"
                android:background="#ffeeeeee"></RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fire"
                android:id="@+id/fireButton"
                android:layout_gravity="center_horizontal"
                android:focusable="false"
                android:enabled="true"
                android:onClick="fireButtonClick"
                android:visibility="visible"
                android:layout_marginBottom="23dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/final_layout"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/picture_view"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/terminated"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lose_black_accident"
                    android:id="@+id/end_event_description"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/continue_text"
                android:id="@+id/textView3"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button2"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/cueBallPlacable"
        android:layout_toEndOf="@+id/cueBallPlacable"
        android:onClick="temp_funct"
        android:visibility="visible" />

</RelativeLayout>
